# TrustName

./: .gitignore  Anchor.toml  Cargo.toml  README.md  brand.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
docs/: judge-demo-runbook.md  resource-notes.md
programs/trustname_attestation/: Cargo.toml
programs/trustname_attestation/src/: lib.rs
src/app/: globals.css  layout.tsx
src/app/(app)/campaigns/[id]/: page.tsx
src/app/(app)/campaigns/new/: page.tsx
src/app/(app)/clusters/: page.tsx
src/app/(app)/dashboard/: page.tsx
src/app/(app)/identity/[domainOrWallet]/: page.tsx
src/app/(public)/claim/[campaignSlug]/: page.tsx
src/app/api/campaigns/: route.ts
src/app/api/campaigns/[id]/allowlist/: route.ts
src/app/api/verify/: route.ts
src/components/: app-shell.tsx  campaign-builder.tsx  claim-experience.tsx  evidence-list.tsx  wallet-providers.tsx
src/components/ui/: button.tsx  surface.tsx
src/db/: schema.ts
src/lib/: attestation.ts  demo-data.ts  magicblock.ts  scoring.test.ts  scoring.ts  sns.ts  types.ts  utils.ts
src/lib/idl/: trustname_attestation.json
