[package]
name = "trustname_attestation"
version = "0.1.0"
description = "Anchor program for TrustName campaign eligibility attestations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trustname_attestation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
